Fetch event release assert should take into account the fetch mode https://bugs.webkit.org/show_bug.cgi?id=183047

Patch by Youenn Fablet <youenn@apple.com> on 2018-02-22
Reviewed by Chris Dumez.

In case of navigation tasks, we should use the request URL and not the origin of the loading client.

* WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::isValidFetch):
(WebKit::WebSWContextManagerConnection::startFetch):

Canonical link: https://commits.webkit.org/198799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228930 268f45cc-cd09-0410-ab3c-d52691b4dbfc